[hotfix] Move `MergeTableAsUtil` and `SchemaBuilderUtil` to `converters` package